navbar update + other changes

--- a/about.html
+++ b/about.html
@@ -155,7 +155,14 @@
 
         <!-- <div class="container"> -->
         <div class="row align-items-center">
-            <div class="col-md-8">
+
+            <div class="col-md-4 order-md-2">
+                <img src="assets/images/about-page/corporate-section-img/corporate-section-img.webp"
+                    alt="Corporate Image" class="img-fluid img-fluid-corporate bottom-0-right-0 banner-animation"
+                    loading="lazy">
+            </div>
+
+            <div class="col-md-8 order-md-1">
                 <p class="text-justify">
                     Bhagirath Industries Private Limited, founded in 2019 and headquartered in Ahmedabad Gujarat
                     India, is emerging Agri Business of India the only fully Integrated Agro Processing, Edible
@@ -175,11 +182,7 @@
                     merchandising to manufacturing of a wide range of agricultural products.
                 </p>
             </div>
-            <div class="col-md-4">
-                <img src="assets/images/about-page/corporate-section-img/corporate-section-img.webp"
-                    alt="Corporate Image" class="img-fluid img-fluid-corporate bottom-0-right-0 banner-animation"
-                    loading="lazy">
-            </div>
+
         </div>
         <!-- </div> -->
     </section>
@@ -204,8 +207,8 @@
                             class="img-fluid about-page-tab-section-image">
                     </div>
                     <div class="col-md-9 p-4 justified-text">
-                        <h2 class="text-start">Our Vision</h2>
-                        <p class="text-start">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+                        <h2 class="text-center text-md-start">Our Vision</h2>
+                        <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
                             obcaecati numquam beatae rerum, exercitationem architecto sequi dignissimos ullam!
                             Laboriosam maxime cum eum reprehenderit vero! Reiciendis repellat saepe labore! Labore,
                             at minima illo consequuntur accusamus placeat officia vero quas nostrum nobis. Officiis
@@ -226,8 +229,8 @@
                             class="img-fluid about-page-tab-section-image">
                     </div>
                     <div class="col-md-9 p-4">
-                        <h2 class="text-start">Our Mission</h2>
-                        <p class="text-start">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+                        <h2 class="text-center text-md-start">Our Mission</h2>
+                        <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
                             obcaecati numquam beatae rerum, exercitationem architecto sequi dignissimos ullam!
                             Laboriosam maxime cum eum reprehenderit vero! Reiciendis repellat saepe labore! Labore,
                             at minima illo consequuntur accusamus placeat officia vero quas nostrum nobis. Officiis
@@ -248,8 +251,8 @@
                             class="img-fluid about-page-tab-section-image">
                     </div>
                     <div class="col-md-9 p-4">
-                        <h2 class="text-start">Our Values</h2>
-                        <p class="text-start">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+                        <h2 class="text-center text-md-start">Our Values</h2>
+                        <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
                             obcaecati numquam beatae rerum, exercitationem architecto sequi dignissimos ullam!
                             Laboriosam maxime cum eum reprehenderit vero! Reiciendis repellat saepe labore! Labore,
                             at minima illo consequuntur accusamus placeat officia vero quas nostrum nobis. Officiis
@@ -270,8 +273,8 @@
                             class="img-fluid about-page-tab-section-image">
                     </div>
                     <div class="col-md-9 p-4">
-                        <h2 class="text-start">Our Core Value</h2>
-                        <p class="text-start">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+                        <h2 class="text-center text-md-start">Our Core Value</h2>
+                        <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
                             obcaecati numquam beatae rerum, exercitationem architecto sequi dignissimos ullam!
                             Laboriosam maxime cum eum reprehenderit vero! Reiciendis repellat saepe labore! Labore,
                             at minima illo consequuntur accusamus placeat officia vero quas nostrum nobis. Officiis
@@ -292,8 +295,8 @@
                             class="img-fluid about-page-tab-section-image">
                     </div>
                     <div class="col-md-9 p-4">
-                        <h2 class="text-start">Value Chain</h2>
-                        <p class="text-start">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
+                        <h2 class="text-center text-md-start">Value Chain</h2>
+                        <p class="text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam
                             obcaecati numquam beatae rerum, exercitationem architecto sequi dignissimos ullam!
                             Laboriosam maxime cum eum reprehenderit vero! Reiciendis repellat saepe labore! Labore,
                             at minima illo consequuntur accusamus placeat officia vero quas nostrum nobis. Officiis
@@ -465,7 +468,8 @@
     <section class="corporate-organogram py-4">
         <div class="container text-light">
             <h2>Corporate Organogram</h2>
-            <p>Lorem ipsum dolor sit amet consectetur. Donec quis vitae condimentum fringilla eleifend eu cras et
+            <p class="heavy-font">Lorem ipsum dolor sit amet consectetur. Donec quis vitae condimentum fringilla
+                eleifend eu cras et
                 amet. Eu non mi accumsan lacus enim. Nullam nam odio gravida nulla turpis tempor sit tristique. Eget
                 luctus neque sapien accumsan dui ac mauris lobortis elit. Lorem ipsum dolor sit amet consectetur.
                 Donec quis vitae condimentum fringilla eleifend eu cras et amet. Eu non mi accumsan lacus enim.
@@ -494,7 +498,7 @@
                 <div class="col-md-3 mb-4">
                     <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
                         class="img-fluid-footer-logo"> -->
-                    <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo"
+                    <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
                         class="img-fluid-footer-logo">
                     <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
@@ -589,6 +593,24 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
         };
+
+        //This is the script that makes the navbar vanish when scrolling down on small screens
+        document.addEventListener('DOMContentLoaded', function () {
+            let lastScrollTop = 0;
+            const navbar = document.querySelector('.custom-navbar');
+            const isMobileView = window.matchMedia("(max-width: 767px)");
+            window.addEventListener('scroll', function () {
+                if (isMobileView.matches) { // Apply only on mobile screens
+                    let currentScrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    if (currentScrollTop > lastScrollTop) {
+                        navbar.classList.add('navbar-hidden');
+                    } else {
+                        navbar.classList.remove('navbar-hidden');
+                    }
+                    lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+        });
     </script>
 
 </body>
