--- a/career.html
+++ b/career.html
@@ -352,7 +352,7 @@
         <div class="col-md-3 mb-4">
           <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
                       class="img-fluid-footer-logo"> -->
-          <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo" class="img-fluid-footer-logo">
+          <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo" class="img-fluid-footer-logo">
           <p class="text-light pt-3">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
             trade, a company that thrives on connecting the world through commerce.</p>
         </div>
@@ -419,7 +419,6 @@
 
   <script>
     // BACK TO TOP SCRIPT
-
     let backToTopBtn = document.getElementById("backToTopBtn");
     window.onscroll = function () { scrollFunction() };
     function scrollFunction() {
@@ -435,7 +434,6 @@
     };
 
     // JOB SEARCH SCRIPT
-
     document.querySelector('.job-search-btn').addEventListener('click', function () {
       // Get the selected values
       const selectedTitle = document.getElementById('jobTitles').value.toLowerCase();
@@ -475,7 +473,6 @@
     });
 
     // JOB APPLICATION FORM SCRIPT
-
     let formJobApplication = document.getElementById("jobApplicationForm");
     formJobApplication.addEventListener('submit', (e) => {
       e.preventDefault();
@@ -491,6 +488,24 @@
           document.querySelector("#submitButtonJobApplicationForm").value = "Your form has been submitted";
         })
     })
+
+    //This is the script that makes the navbar vanish when scrolling down on small screens
+    document.addEventListener('DOMContentLoaded', function () {
+      let lastScrollTop = 0;
+      const navbar = document.querySelector('.custom-navbar');
+      const isMobileView = window.matchMedia("(max-width: 767px)");
+      window.addEventListener('scroll', function () {
+        if (isMobileView.matches) { // Apply only on mobile screens
+          let currentScrollTop = window.pageYOffset || document.documentElement.scrollTop;
+          if (currentScrollTop > lastScrollTop) {
+            navbar.classList.add('navbar-hidden');
+          } else {
+            navbar.classList.remove('navbar-hidden');
+          }
+          lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+        }
+      });
+    });
 
   </script>
 
