--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
     <!-- NAVBAR NEW -->
 
     <nav class="navbar navbar-expand-lg custom-navbar fixed-top">
-        <div class="container-fluid px-5">
+        <div class="container-fluid py-lg-3 px-5">
             <a class="navbar-brand" href="./index.html">
                 <img src="assets/images/navbarlogo/logo.png" alt="BIPL Logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav justify-space-around me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item ps-lg-5">
                         <a class="nav-link text-dark active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
@@ -75,12 +75,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="./our-services.html">Our Services</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item pe-lg-5">
                         <a class="nav-link text-dark" href="./career.html">Careers</a>
                     </li>
 
                     <a href="contact-us.html">
-                        <button class="btn btn-orange" href="./contact-us.html" type="button">
+                        <button class="btn navbar-contact-us-button" href="./contact-us.html" type="button">
                             Contact Us
                         </button>
                     </a>
@@ -144,51 +144,6 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-
-    <!-- CARD SECTION (OLD) -->
-
-    <!-- <section>
-        <div class="container d-flex gap-3 our-services-top-card">
-            <div class="card col-md-4 card-z mr-lg-4">
-                <div class="d-flex pt-4">
-                    <div class="col-3 d-flex align-items-start justify-content-center">
-                        <img src="assets/images/icons/icon1.png" alt="">
-                    </div>
-                    <div class="col-8">
-                        <h3 class="card-title text-light">INTERNATIONAL TRADE</h3>
-                        <p class="card-text text-light">When it comes to international trade, Our experience in
-                            connecting businesses worldwide ensures smooth and efficient transactions. Whether you're
-                            importing or exporting, we make it simple.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card col-md-4 card-z mr-lg-4">
-                <div class="d-flex pt-4">
-                    <div class="col-3 d-flex align-items-start justify-content-center">
-                        <img src="assets/images/icons/icon2.png" alt="">
-                    </div>
-                    <div class="col-8">
-                        <h3 class="card-title text-light">100% Certified</h3>
-                        <p class="card-text text-light">Quality and authenticity are our priorities. Rest easy knowing
-                            that our products are 100% certified, meeting the highest standards and regulations. Your
-                            satisfaction is our guarantee.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="card col-md-4 card-z mr-lg-4">
-                <div class="d-flex pt-4">
-                    <div class="col-3 d-flex align-items-start justify-content-center">
-                        <img src="assets/images/icons/icon3.png" alt="">
-                    </div>
-                    <div class="col-8">
-                        <h3 class="card-title text-light">International Transport and Logistics</h3>
-                        <p class="card-text text-light">We specialize in seamless international transport and logistics,
-                            ensuring your cargo reaches its destination effortlessly. Your goods, our commitment..</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- ABOUT US SECTION -->
 
@@ -264,7 +219,7 @@
                 <div class="col-12 col-md-4 mb-3">
                     <div class="box-a text-bg-light">
                         <img src="assets/images/home-page-images/about-us-card-image/home-page-about-us-card-img-1.webp"
-                            class="card-img-top" alt="Global Merchant Trader">
+                            class="card-img-top img-fluid" alt="Global Merchant Trader">
                         <h3 class="about-card-title text-dark">Global Merchant Trader</h3>
                         <p class="about-card-text text-black">We're your global merchants, passionate about delivering
                             top-quality products to eager markets worldwide. With extensive experience and a robust
@@ -342,10 +297,9 @@
             <div class="content-our-skill">
                 <h2 class="text-center">OUR SKILLS</h2>
                 <p class="pb-5 text-center">At Bhagirath BVM Grand, we pride ourselves on delivering your goods on time,
-                    every time, with a high
-                    success rate that speaks to our commitment to your satisfaction. We excel in swiftly sourcing
-                    quality products and maintaining transparent, clear communication throughout our partnership,
-                    ensuring your peace of mind.</p>
+                    every time, with a high success rate that speaks to our commitment to your satisfaction. We excel in
+                    swiftly sourcing quality products and maintaining transparent, clear communication throughout our
+                    partnership, ensuring your peace of mind.</p>
             </div>
 
             <!-- COUNTER -->
@@ -485,57 +439,6 @@
         </div>
     </section>
 
-    <!-- TRADING PORTFOLIO SECTION (OLD) -->
-
-    <!-- <section class="trading-portfolio py-5 pt-5">
-        <div class="container trading-p">
-            <h2 class="text-center">TRADING PORTFOLIO</h2>
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur. Magna blandit proin ut bibendum pharetra
-                vulputate. Ipsum fringilla scelerisque nec eu. Odio euismod ultricies nibh amet eu dignissim morbi
-                magnis. Pellentesque lacus odio ullamcorper at mauris facilisi orci libero quam. Tellus a mauris
-                ultrices ligula.</p>
-
-            <div class="row trading-portfolio-box">
-                <div class="col-md-4">
-                    <div class="content-trading-portfolio">
-                        <p>Bhagirath BVM Grand (HK) Limited Trading Portfolio. We serve as the catalysts of global
-                            trade, connecting the world through commerce. Our passion for trade transcends borders, and
-                            we're your trusted partner for all things products. From sourcing to supply, we inspire
-                            global trade, providing a reliable gateway to a world of possibilities. Our commitment to
-                            excellence and relentless pursuit of quality make us the preferred choice for businesses
-                            looking to explore, expand, and excel in international trade. Join us on this journey, and
-                            together, let's shape a future of global trade that makes things deliver at your doorstep.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 text-center icon-trading">
-                    <div class="icon-trading-portfolio">
-                        <a href="javascript:void(0);" data-img1="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-1.png" data-img2="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-2.png" data-img3="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-3.png">
-                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="">Crude Oil
-                        </a>
-                        <a href="javascript:void(0);" data-img1="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-image-1.png" data-img2="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-image-2.png" data-img3="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-image-3.png">
-                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="">Partnering Procedure
-                        </a>
-                        <a href="javascript:void(0);" data-img1="assets/images/trading-portfolio-img/trading-portfolio-refiners-image-1.png" data-img2="assets/images/trading-portfolio-img/trading-portfolio-refiners-image-2.png" data-img3="assets/images/trading-portfolio-img/trading-portfolio-refiners-image-3.png">
-                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="">Working with Refiners
-                        </a>
-                        <a href="javascript:void(0);" data-img1="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-image-1.png" data-img2="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-image-2.png" data-img3="assets/images/trading-portfolio-img/trading-portfolio-middle-distillates-image-3.png">
-                            <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="">Middle Distillates
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 position-relative">
-                    <img src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-1.png" alt="" id="img1"
-                        class="img-fluid mb-3 w-100 one">
-                    <img src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-2.png" alt="" id="img2"
-                        class="img-fluid last-img">
-                    <img src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-image-3.png" alt="" id="img3"
-                        class="img-fluid w-100 three">
-                </div>
-            </div>
-        </div>
-    </section> -->
-
     <!-- TRADING PORTFOLIO SECTION (NEW) -->
 
     <section class="trading-portfolio py-5 pt-5">
@@ -549,7 +452,7 @@
             <div class="new-trading-portfolio-box container mt-4">
                 <div class="row">
                     <!-- First Section: Text -->
-                    <div class="new-trading-portfolio-box-text col-md-4">
+                    <div class="new-trading-portfolio-box-text col-md-4 order-md-1">
                         <p>Bhagirath BVM Grand (HK) Limited Trading Portfolio. We serve as the catalysts of global
                             trade, connecting the world through commerce. Our passion for trade transcends borders, and
                             we're your trusted partner for all things products. From sourcing to supply, we inspire
@@ -557,14 +460,21 @@
                             of global trade that makes things deliver at your doorstep.</p>
                     </div>
 
+                    <!-- Third Section: Image -->
+                    <div class="new-trading-portfolio-box-image col-md-5 order-md-3">
+                        <img id="portfolio-img"
+                            src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.webp"
+                            class="img-fluid" alt="Portfolio Image">
+                    </div>
+
                     <!-- Second Section: Buttons -->
-                    <div class="new-trading-portfolio-box-buttons col-md-3">
+                    <div class="new-trading-portfolio-box-buttons col-md-3 order-md-2">
                         <button class="btn new-trading-portfolio-box-btn text-start"
                             data-img="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.webp">
                             <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
                             Crude Oil</button>
                         <button class="btn new-trading-portfolio-box-btn text-start"
-                            data-img="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-master-image.webp">
+                            data-img="assets/images/trading-portfolio-img/trading-portfolio-partnering-procedure-master-image-2.webp">
                             <img src="assets/images/trading-portfolio-img/icon/Vector.svg" alt="Arrow image">
                             Partnering Procedure</button>
                         <button class="btn new-trading-portfolio-box-btn text-start"
@@ -577,12 +487,6 @@
                             Middle Distillates</button>
                     </div>
 
-                    <!-- Third Section: Image -->
-                    <div class="new-trading-portfolio-box-image col-md-5">
-                        <img id="portfolio-img"
-                            src="assets/images/trading-portfolio-img/trading-portfolio-crude-oil-master-image.webp"
-                            class="img-fluid" alt="Portfolio Image">
-                    </div>
                 </div>
             </div>
         </div>
@@ -620,7 +524,7 @@
                 <div class="col-md-3 mb-4">
                     <!-- <img src="/assets/images/footer-section/Logo-03 1.png" alt="Company Logo"
                         class="img-fluid-footer-logo"> -->
-                    <img src="./assets/images/footer-section/footer-logo.png" alt="Company Logo"
+                    <img src="./assets/images/footer-section/footer-logo-2.webp" alt="Company Logo"
                         class="img-fluid img-fluid-footer-logo">
                     <p class="text-light pt-2">At Bhagirath BVM Grand (HK) Limited, we are the catalysts of global
                         trade, a company that thrives on connecting the world through commerce.</p>
@@ -628,7 +532,7 @@
                 <!-- frame 40 -->
                 <div class="col-md-3 mb-4 text-light pt-3 pt-md-5">
                     <h3>Useful Links</h3>
-                    <div class="arrow">
+                    <div class="arrow ps-lg-3">
                         <a class="text-light" href="./index.html">Home<img
                                 src="assets/images/footer-section/Arrow 1.png" alt=""></a><br>
                         <a class="text-light" href="./about.html">About Us<img
@@ -683,8 +587,9 @@
                 </div>
             </div>
             <hr class="hr-line text-white">
-            <div class="footer-p-content text-white text-center">
-                <p>Copyright Bhagirath BVM Grand (HK) Limited. All Rights Reserved. Designed & maintained by Bhagirath
+            <div class="footer-p-content text-white">
+                <p class="text-md-center copyright-text">Copyright Bhagirath BVM Grand (HK) Limited. All Rights
+                    Reserved. Designed & maintained by Bhagirath
                     Technologies</p>
             </div>
         </div>
@@ -739,6 +644,24 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
         };
+
+        //This is the script that makes the navbar vanish when scrolling down on small screens
+        document.addEventListener('DOMContentLoaded', function () {
+            let lastScrollTop = 0;
+            const navbar = document.querySelector('.custom-navbar');
+            const isMobileView = window.matchMedia("(max-width: 767px)");
+            window.addEventListener('scroll', function () {
+                if (isMobileView.matches) { // Apply only on mobile screens
+                    let currentScrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    if (currentScrollTop > lastScrollTop) {
+                        navbar.classList.add('navbar-hidden');
+                    } else {
+                        navbar.classList.remove('navbar-hidden');
+                    }
+                    lastScrollTop = currentScrollTop <= 0 ? 0 : currentScrollTop; // Prevent negative scroll values
+                }
+            });
+        });
 
     </script>
 
